# ECE-26.1-Winter-River

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  TESTING.md  config.toml  gallery.md
.github/workflows/: ci.yml
broker/: README.md  config.sample.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  thermal.py
deploy/: EXTERNAL_AP.md  mosquitto_setup.sh  mqtt-broker.service  winter-river-hotspot.service
docs/: 2n-redundancy.md  architecture.md  communication-protocols.md  deployment.md  trainee-assessment.md
esp/: README.md  platformio.ini
esp/include/: config.sample.h
esp/src/: main.cpp
esp32-nodes/: .gitignore  README.md  TROUBLESHOOTING.md  platformio.ini
esp32-nodes/src/: main.cpp
esp32-nodes/src/ats/: README.md
esp32-nodes/src/ats/ats_a/: ats_a.cpp
esp32-nodes/src/ats/ats_b/: ats_b.cpp
esp32-nodes/src/bms/bms/: bms.cpp
esp32-nodes/src/cooling/: README.md
esp32-nodes/src/cooling/cooling_a/: cooling_a.cpp
esp32-nodes/src/cooling/cooling_b/: cooling_b.cpp
esp32-nodes/src/distribution/dist_a/: dist_a.cpp
esp32-nodes/src/generator/: README.md
esp32-nodes/src/generator/gen_a/: README.md  gen_a.cpp
esp32-nodes/src/generator/generator_a/: generator_a.cpp
esp32-nodes/src/generator/generator_b/: generator_b.cpp
esp32-nodes/src/hv_mv_transformer/: README.md
esp32-nodes/src/hv_mv_transformer/hv_mv_transformer_a/: hv_mv_transformer_a.cpp
esp32-nodes/src/hv_mv_transformer/hv_mv_transformer_b/: hv_mv_transformer_b.cpp
esp32-nodes/src/hv_switchgear/: README.md
esp32-nodes/src/hv_switchgear/hv_switchgear_a/: hv_switchgear_a.cpp
esp32-nodes/src/hv_switchgear/hv_switchgear_b/: hv_switchgear_b.cpp
esp32-nodes/src/lighting/: README.md
esp32-nodes/src/lighting/lighting_a/: lighting_a.cpp
esp32-nodes/src/lighting/lighting_b/: lighting_b.cpp
esp32-nodes/src/lv_dist/: README.md
esp32-nodes/src/lv_dist/lv_dist_a/: lv_dist_a.cpp
esp32-nodes/src/lv_dist/lv_dist_b/: lv_dist_b.cpp
esp32-nodes/src/lv_switchgear/: README.md
esp32-nodes/src/lv_switchgear/lv_switchgear_a/: lv_switchgear_a.cpp
esp32-nodes/src/lv_switchgear/lv_switchgear_b/: lv_switchgear_b.cpp
esp32-nodes/src/monitoring/: README.md
esp32-nodes/src/monitoring/monitoring_a/: monitoring_a.cpp
esp32-nodes/src/monitoring/monitoring_b/: monitoring_b.cpp
esp32-nodes/src/mv_lv_transformer/: README.md
esp32-nodes/src/mv_switchgear/: README.md
esp32-nodes/src/mv_switchgear/mv_switchgear_a/: mv_switchgear_a.cpp
esp32-nodes/src/node_a/: main.cpp
esp32-nodes/src/node_b/: main.cpp
esp32-nodes/src/node_c/: main.cpp
esp32-nodes/src/pdu/: README.md
esp32-nodes/src/pdu_a/: pdu_a.cpp
esp32-nodes/src/rectifier/: README.md
esp32-nodes/src/server/: README.md  server.cpp
esp32-nodes/src/server_rack/: README.md  server_rack.cpp
esp32-nodes/src/transformer_a/: transformer_a.cpp
esp32-nodes/src/ups/: README.md
esp32-nodes/src/utility/: README.md
esp32-nodes/test/: wifi_connection_test.cpp
grafana/: .env.sample  README.md  docker-compose.yml  grafana.ini  telegraf.conf
grafana/dashboards/: broker-overview.json  nodes-telemetry.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
scripts/: README.md  init_db.sql  setup_hotspot.sh  setup_pi.sh  status.sh
tests/: README.md  conftest.py  test_engine.py  test_thermal.py
(+22 files in other folders)
